--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <header class="header">
     <div class="header__top">
         <div class="header__top--contact">
-            <span class="header__top--contact__email">company@domain.com</span>
+            <span class="header__top--contact__email">company&#64;domain.com</span>
             <span class="header__top--contact__separator">|</span>
             <span class="header__top--contact__location">Tivat, Montenegro</span>
         </div>
@@ -82,7 +82,7 @@
                 <a href="#" class="header__nav--menu__item__link">Home</a>
             </li>
             <li class="header__nav--menu__item">
-                <a href="#" class="header__nav--menu__item__link">About</a>
+                <a href="about.html" class="header__nav--menu__item__link">About</a>
             </li>
             <li class="header__nav--menu__item">
                 <a href="#" class="header__nav--menu__item__link">Packages</a>
@@ -97,6 +97,7 @@
         </div>
     </div>
 </header>
+
 <section class="hero">
     <h2 class="hero__title">Experience Montenegro Like Never Before</h2>
     <p class="hero__subtitle">Let the journey begin</p>
@@ -108,7 +109,6 @@
 
     <div class="packages__cards">
 
-        <!-- FIRST CARD (Short Tour) -->
         <article class="packages__cards--card packages__cards--card__short">
             <div class="packages__cards--card__image">
                 <img src="https://cdn.getyourguide.com/img/location/5eb12ba3d32ef.jpeg/99.jpg" alt="Tour Image"/>
